@@ -1,5 +1,9 @@
 DATE       AUTHOR       CHANGE
 ---------- ------------ -------------------------------------------------------
+2004-03-25 allenb       Require param to boost option stating wether to use
+                        debug and multi-threaded libraries.  This should help
+                        avoid problems that occur if you just let the defaults
+                        get used.
 2004-03-09 allenb       Updated pyste builder to scons 0.95
 2004-03-06 allenb       Updated the autodist factory methods for libs and
                         programs to use the package environment by default.
